# delamain

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: build.yaml
lua/plugins/: autothread.tl
src/: autothread.rs  bot.rs  config.rs  main.rs
