[package]
name = "delamain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
    "model",
    "cache",
    "http",
    "client",
    "rustls_backend",
] }
color-eyre = "0.6.2"
poise = "0.5.2"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
persy = "1.4.4"
